[package]
name = "aoc-2015"
version = "0.1.0"
authors = ["Kris Verbeeck <kris_verbeeck@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
md5 = "0.7.0"
regex = "1.3.1"
lazy_static = "1.4.0"
num-bigint = "0.2"
num-traits = "0.2"
array-macro = "1.0.4"

[lib]
name = "util"
path = "src/util.rs"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"
th = "src/day5.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"
