[package]
name = "aoc-2015"
version = "0.1.0"
authors = ["Kris Verbeeck <kris_verbeeck@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
md5 = "0.7.0"
regex = "1.3.1"
lazy_static = "1.4.0"
num-bigint = "0.2"
num-traits = "0.2"
array-macro = "1.0.4"
